[package]
name = "hickory-server"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
Hickory DNS is a safe and secure DNS server with DNSSEC support.
 Eventually this could be a replacement for BIND9. The DNSSEC support allows
 for live signing of all records, in it does not currently support
 records signed offline. The server supports dynamic DNS with SIG0 authenticated
 requests. Hickory DNS is based on the Tokio and Futures libraries, which means
 it should be easily integrated into other software that also use those
 libraries.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/hickory-server"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
backtrace = ["hickory-proto/backtrace"]
# Recursive Resolution is Experimental!
recursor = ["dep:hickory-recursor", "dep:hickory-resolver"]
resolver = ["dep:hickory-resolver"]
sqlite = ["rusqlite"]
blocklist = ["resolver"]
toml = ["dep:toml"]

tls-aws-lc-rs = [
    "hickory-proto/tls-aws-lc-rs",
    "hickory-resolver?/tls-aws-lc-rs",
    "__tls",
]
https-aws-lc-rs = [
    "hickory-proto/https-aws-lc-rs",
    "hickory-resolver?/https-aws-lc-rs",
    "tls-aws-lc-rs",
    "__https",
]
quic-aws-lc-rs = [
    "hickory-proto/quic-aws-lc-rs",
    "hickory-resolver?/quic-aws-lc-rs",
    "tls-aws-lc-rs",
    "__quic",
]
h3-aws-lc-rs = [
    "hickory-proto/h3-aws-lc-rs",
    "hickory-resolver?/h3-aws-lc-rs",
    "quic-aws-lc-rs",
    "__h3",
]

tls-ring = [
    "hickory-proto/tls-ring",
    "hickory-resolver?/tls-ring",
    "__tls",
]
https-ring = [
    "hickory-proto/https-ring",
    "hickory-resolver?/https-ring",
    "tls-ring",
    "__https",
]
quic-ring = [
    "hickory-proto/quic-ring",
    "hickory-resolver?/quic-ring",
    "tls-ring",
    "__quic",
]
h3-ring = [
    "hickory-proto/h3-ring",
    "hickory-resolver?/h3-ring",
    "quic-ring",
    "__h3",
]

__tls = ["dep:rustls", "dep:tokio-rustls"]
__https = ["dep:h2", "dep:http", "__tls"]
__quic = ["__tls"]
__h3 = ["dep:h3", "dep:h3-quinn", "__quic"]

dnssec-aws-lc-rs = ["hickory-proto/dnssec-aws-lc-rs", "hickory-recursor?/dnssec-aws-lc-rs", "hickory-resolver?/dnssec-aws-lc-rs", "serde/rc", "__dnssec"]
dnssec-ring = ["hickory-proto/dnssec-ring", "hickory-recursor?/dnssec-ring", "hickory-resolver?/dnssec-ring", "serde/rc", "__dnssec"]
__dnssec = []

webpki-roots = ["hickory-resolver?/webpki-roots"]
rustls-platform-verifier = ["hickory-resolver?/rustls-platform-verifier"]

testing = []

[lib]
name = "hickory_server"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
toml = { workspace = true, optional = true }
bytes.workspace = true
cfg-if.workspace = true
data-encoding.workspace = true
enum-as-inner.workspace = true
futures-util = { workspace = true, default-features = false, features = ["std"] }
h2 = { workspace = true, features = ["stream"], optional = true }
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
http = { workspace = true, optional = true }
ipnet = { workspace = true, features = ["serde"] }
prefix-trie.workspace = true
rusqlite = { workspace = true, features = ["bundled", "time"], optional = true }
rustls = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["macros", "net", "sync"] }
tokio-rustls = { workspace = true, optional = true }
tokio-util.workspace = true
hickory-proto = { workspace = true, features = ["serde", "text-parsing", "tokio"] }
hickory-recursor = { workspace = true, features = ["serde"], optional = true }
hickory-resolver = { workspace = true, features = ["serde", "system-config", "tokio"], optional = true }

[dev-dependencies]
futures-executor = { workspace = true, default-features = false, features = ["std"] }
test-support.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-subscriber.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
max_combination_size = 2
denylist = ["__tls", "__https", "__quic", "__h3", "__dnssec"]
