[package]
name = "hickory-compatibility"
publish = false

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
Hickory DNS compatibility testing library.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/hickory-dns"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "../README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[badges]
#github-actions = { repository = "bluejekyll/hickory", branch = "main", workflow = "test" }
codecov = { repository = "hickory-dns/hickory-dns", branch = "main", service = "github" }
maintenance = { status = "actively-developed" }

[features]
default = ["none"]
none = []
bind = []
hickory_client = []

[lib]
name = "hickory_compatibility"
path = "src/lib.rs"

[dependencies]
data-encoding.workspace = true
rand.workspace = true

[dev-dependencies]
futures.workspace = true
hickory-client = { workspace = true, features = ["dnssec-ring"] }
rustls-pki-types.workspace = true
test-support.workspace = true
time.workspace = true
tokio.workspace = true
