[package]
name = "hickory-compatibility"
publish = false

description = """
Hickory DNS compatibility testing library.
"""

documentation = "https://docs.rs/hickory-dns"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["none"]
none = []
bind = []

[lib]
name = "hickory_compatibility"
path = "src/lib.rs"

[dependencies]
data-encoding = { workspace = true, features = ["alloc"] }
rand = { workspace = true, features = ["std", "thread_rng"] }

[dev-dependencies]
futures.workspace = true
hickory-proto = { workspace = true, features = ["dnssec-ring"] }
rustls-pki-types.workspace = true
test-support.workspace = true
time.workspace = true
tokio.workspace = true

[lints]
workspace = true
